# Chess

./: .gitignore  CMakeLists.txt  README.md  ToDo.txt
Assets/Bitmaps & Vectors/: Black Bishop.tiff  Black King.tiff  Black Knight.tiff  Black Pawn.tiff  Black Queen.tiff  Black Rook.tiff  White Bishop.tiff  White King.tiff  White Knight.tiff  White Pawn.tiff  White Queen.tiff  White Rook.tiff
Chess/: Board.cpp  Board.h  NotificationSystem.cpp  NotificationSystem.h  Piece.cpp  Piece.h  Position.h  main.cpp
Chess.xcodeproj/: project.pbxproj
Chess.xcodeproj/project.xcworkspace/xcshareddata/: Chess.xccheckout
Chess.xcodeproj/project.xcworkspace/xcuserdata/Adam.xcuserdatad/: UserInterfaceState.xcuserstate
Chess.xcodeproj/xcuserdata/Adam.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
CompiledBinaries/Chess/: info.plist
CompiledBinaries/Chess/Logs/Debug/: Cache.db  (+1 more)
CompiledBinaries/Chess/TextIndex/: text-filter.idx
Config/: Alternate Board Configurations.txt  Board Representations.txt  BuildConfig.xcconfig
Debug/: Chess
License/: Tree License.txt
Source/: main.cpp
Source/Game/: Board.cpp  Board.h  Chess.h  Color.h  Game.cpp  Game.h  Piece.cpp  Piece.h  Player.cpp  Player.h  Square.cpp  Square.h  Support.cpp  Support.h
Source/Util/: Color.h  Config.cpp  Config.h  NotificationSystem.h  Position.cpp  Position.h  Random.hpp  Tree.hpp  UniqueNumericID.h  Util.cpp  Util.h  Util.hpp  Vect.cpp  Vect.h  tree.hh
Source/View/: Decl_Apple.h  DisplayData.cpp  DisplayData.h  DisplayData.mm  MacOSSpecificDeclarations.h  Window.cpp  Window.h  Window.mm
(+28 files in other folders)
